--- a/apps/erp/src/styles.styl
+++ b/apps/erp/src/styles.styl
@@ -1,2 +1,2 @@
 /* You can add global styles to this file, and also import other style files */
-@import "~jsgantt-improved/dist/jsgantt.css";
+// @import "~jsgantt-improved/dist/jsgantt.css";
